# french_rap_lyrics_scraper

./: .gitignore  fetch_artists_names.py  fetch_lyrics_per_artist.py  file_utils.py  main.yml  pyproject.toml  requirements.txt
config/: main.yml
data/extrernal/: FEEL.csv
notebooks/: eda.ipynb
src/: paths.py
src/app/: app 2.py  app.py
src/app/utils/: app_utils.py
src/data_crawler/: fetch_artists_names.py  fetch_lyrics_per_artist.py  main_get_artists_names.py  main_get_lyrics.py
src/data_crawler/utils/: artists_names_utils.py  lyrics_utils.py
src/data_ingestion/: ingest.py
src/data_preprocessing/: main_metadata_preprocessor.py  processor.py
src/data_preprocessing/utils/: metadata_utils.py
src/utils/: file_utils.py  logger.py
